IF( COMMAND CMAKE_MINIMUM_REQUIRED )
        CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENDIF( COMMAND CMAKE_MINIMUM_REQUIRED )

####################################################################################
# Additional Directories to deal with...
####################################################################################
ADD_SUBDIRECTORY(edje_console)
ADD_SUBDIRECTORY(text_views)
