## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	$(EFL_CFLAGS)\
	$(SIGC_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = \
	libstateval.la

libstateval_la_SOURCES = \
	Action.cpp      \
	CompoundState.cpp      \
	Condition.cpp      \
	DecisionState.cpp      \
	EcoreDispatcher.cpp      \
	EdjeView.cpp      \
	Exceptions.cpp      \
	FireEventAction.cpp      \
	GlobalVariables.cpp      \
	HistoryState.cpp      \
	SimpleState.cpp      \
	State.cpp      \
	Statemachine.cpp      \
	Transition.cpp      \
	Variable.cpp      \
	View.cpp      \
	ViewState.cpp      \
	StateMachineAccess.cpp      \
	StateMachineThread.cpp      \
	localUtil.cpp      \
	localUtil.h      \
	SMLoader.cpp      \
	FileReader.cpp      \
	FileReader.h      \
	stringUtil.cpp      \
	stringUtil.h      \
	GraphicContext.cpp      \
	TextView.cpp

libstateval_la_LIBADD = \
	$(EFL_LIBS)      \
	$(SIGC_LIBS)

