
libstateval_private_HEADERS = \
	Action.h             \
	ChangeVariableAction.h             \
	CompoundState.h             \
	Condition.h             \
	DecisionState.h             \
	Exceptions.h             \
	FireEventAction.h             \
	HistoryState.h             \
	Loader.h             \
	SimpleState.h             \
	State.h             \
	Transition.h             \
	View.h             \
	ViewState.h

libstateval_privatedir = \
	$(pkgincludedir)

EXTRA_DIST = \
	$(libstateval_private_HEADERS)

## File created by the gnome-build tools

