
bin_PROGRAMS = \
	edje_console

edje_console_SOURCES = \
	InputThread.cpp\
	InputThread.h \
	searchFile.cpp \
	searchFile.h \
	Main.h \
	Main.cpp

edje_console_LDADD = \
	../../src/libstateval.la\
	$(EFL_LIBS)

AM_CPPFLAGS = \
	-I../../include\
	$(EFL_CFLAGS)

## File created by the gnome-build tools

