
libstateval_HEADERS = \
	Action.h     \
	CompoundState.h     \
	Condition.h     \
	DecisionState.h     \
	EcoreDispatcher.h     \
	EdjeView.h     \
	EventList.h     \
	Exceptions.h     \
	FireEventAction.h     \
	GlobalVariables.h     \
	HistoryState.h     \
	SimpleState.h     \
	State.h     \
	StateMachine.h     \
	Transition.h     \
	Variable.h     \
	View.h     \
	ViewState.h     \
	stateval.h     \
	StateMachineAccess.h     \
	StateMachineThread.h     \
	SMLoader.h     \
	GraphicContext.h

libstatevaldir = \
	$(pkgincludedir)

EXTRA_DIST = \
	$(libstateval_HEADERS)

## File created by the gnome-build tools

